[tool.poetry]
name = "opengym"
version = "0.1.0"
description = ""
authors = ["Akarsh Jain <akarsh.1995.02@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <4"
torchvision = "^0.7.0"
wandb = "^0.9.4"
opencv-python = "^4.4.0"
torch = "^1.6.0"
gym = ">=0.17.2"
tqdm = "^4.48.2"
argh = "^0.26.2"
atari-py = "^0.2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
